Adding Basic Operations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <div class="screen">
-        <p id="resultado">resultado</p>
+        <p id="result">0</p>
     </div>
     <div class="numbers">
         <button class="btn">7</button>
@@ -38,7 +38,6 @@
         
         
         <button class="btn">/</button>
-        <button class="btn dot">.</button>
         <button class="btn equal">=</button>
     </div>
     <script src="./js/script.js"></script>
