--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
 <div class="container">
     <div class="screen">
-        <p id="result">0</p>
+        <p id="result">0.00</p>
     </div>
     <div class="numbers">
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
         <button class="btn clear">C</button>
+        <button class="btn del">Del</button>
         <button class="btn">4</button>
         <button class="btn">5</button>
         <button class="btn">6</button>
@@ -38,6 +39,7 @@
         
         
         <button class="btn">/</button>
+        <button class="btn dot">.</button>
         <button class="btn equal">=</button>
     </div>
     <script src="./js/script.js"></script>
