--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/img/calculator.png" type="image/png">
+    <title>Calculator</title>
 </head>
 <body>
 <div class="container">
@@ -36,6 +37,7 @@
 
     <footer>
         <p>This was made by <a href="https://github.com/Aviscad" target="_blank">@Aviscad</a> &copy; 2022</p>
+        <a href="https://www.flaticon.com/free-icons/calculator" title="calculator icons">Calculator icons created by Pixel perfect - Flaticon</a>
     </footer>
     <script src="./js/script.js"></script>
 </div>
